Fixed content spacing in lower header

--- a/mobile/mobile-header.css
+++ b/mobile/mobile-header.css
@@ -67,12 +67,12 @@ header {
     background: #fffef8;
     position: relative;
     display: flex;
-    padding: 1rem 3.125rem 0 3.125rem;
+    padding-top: 1rem;
     flex: 1;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 1140px;
+    width: 95%;
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
@@ -88,7 +88,6 @@ header {
 
 .menu-icon-right {
     display: none;
-
 }
 
 .left-content {
